--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
   "version": 2,
-  "framework": null,
+  "functions": {
+    "api/index.php": {
+      "runtime": "vercel-php@0.8.0"
+    }
+  },
   "builds": [
-    {
-      "src": "/api/index.php",
-      "use": "@vercel/php"
-    },
     {
       "src": "/public/**",
       "use": "@vercel/static"
