fix: Add build environment for Composer compatibility

--- a/vercel.json
+++ b/vercel.json
@@ -32,5 +32,10 @@
     "APP_DEBUG": "false",
     "LOG_CHANNEL": "stderr",
     "SESSION_DRIVER": "cookie"
+  },
+  "build": {
+    "env": {
+      "COMPOSER_ALLOW_SUPERUSER": "1"
+    }
   }
 }
