--- a/vercel-simple.json
+++ b/vercel-simple.json
@@ -1,14 +1,8 @@
 {
   "version": 2,
   "functions": {
-    "api/index.php": {
-      "runtime": "vercel-php@0.7.1"
-    },
-    "api/index-debug.php": {
-      "runtime": "vercel-php@0.7.1"
-    },
-    "api/check.php": {
-      "runtime": "vercel-php@0.7.1"
+    "api/*.php": {
+      "runtime": "vercel-php@0.8.0"
     }
   },
   "routes": [
@@ -32,16 +26,5 @@
       "src": "/(.*)",
       "dest": "/api/index.php"
     }
-  ],
-  "env": {
-    "APP_ENV": "production",
-    "APP_DEBUG": "false",
-    "LOG_CHANNEL": "stderr",
-    "SESSION_DRIVER": "cookie"
-  },
-  "build": {
-    "env": {
-      "COMPOSER_ALLOW_SUPERUSER": "1"
-    }
-  }
+  ]
 }
