--- a/vercel.json
+++ b/vercel.json
@@ -46,5 +46,6 @@
     "env": {
       "COMPOSER_ALLOW_SUPERUSER": "1"
     }
-  }
+  },
+  "buildCommand": "php build-debug.php && composer install --no-dev --optimize-autoloader"
 }
