fix: Correct Vercel build command syntax
- Changed && to proper installCommand for composer dependencies
- Removed invalid && separator that caused exit code 127
- Use installCommand instead of buildCommand for dependency installation

--- a/vercel.json
+++ b/vercel.json
@@ -47,5 +47,5 @@
       "COMPOSER_ALLOW_SUPERUSER": "1"
     }
   },
-  "buildCommand": "php build-debug.php && composer install --no-dev --optimize-autoloader"
+  "installCommand": "composer install --no-dev --optimize-autoloader"
 }
