--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,16 @@
 {
   "version": 2,
   "functions": {
-    "api/*.php": {
-      "runtime": "vercel-php@0.7.1"
+    "api/index.php": {
+      "runtime": "vercel-php@0.8.0"
     }
   },
+  "builds": [
+    {
+      "src": "/public/**",
+      "use": "@vercel/static"
+    }
+  ],
   "routes": [
     {
       "src": "/(css|js|images)/(.*)",
@@ -24,7 +30,13 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/api/cms.php"
+      "dest": "/api/index.php"
     }
-  ]
+  ],
+  "env": {
+    "APP_ENV": "production",
+    "APP_DEBUG": "false",
+    "LOG_CHANNEL": "stderr",
+    "SESSION_DRIVER": "cookie"
+  }
 }
