Add DigitalOcean App Platform configuration
- Add .do/app.yaml for DigitalOcean deployment
- Add digitalocean-deploy.sh script
- Update composer.json with post-install commands
- Configure PostgreSQL database with environment variables
- Setup Supabase integration for DigitalOcean

--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,10 @@
         "test": [
             "@php artisan config:clear --ansi",
             "@php artisan test"
+        ],
+        "post-install-cmd": [
+            "chmod +x scripts/digitalocean-deploy.sh",
+            "scripts/digitalocean-deploy.sh"
         ]
     },
     "extra": {
